--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,45 @@
 #logoBar{
   width: 30vw;
   height: 100vh;
+  margin: 5px;
 }
 #siteLogo{
   width: 100%;
 }
-body {
-  display: flex;
+h1 {
+  color: darkblue;
 }
+body {
+  background: lightcoral;
+  display: flex;
+  font-family: "Lucida Console", "Courier New", monospace;
+}
+.card {
+  padding: 2px 2px;
+  border-radius: 5px;
+  background-color: white;
+  border: 2px solid black;
+  margin: 10px 10px;
+  justify-content: space-between;
+  box-shadow: 2px;
+  height: min-content;
+  text-align: center;
+}
+
 #staffGallery{
   width: 70vw;
   display: inherit;
-
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 .galleryImage{
   width: 100%;
   height: auto;
   height: 300px;
+}
+
+@media screen and (max-width: 600px) {
+  body {
+    flex-direction: column;
+  }
 }
